--- a/D06 - Control Check/Control Check - Angel/Item 3 - Project/Acme-Rookies/pom.xml
+++ b/D06 - Control Check/Control Check - Angel/Item 3 - Project/Acme-Rookies/pom.xml
@@ -323,7 +323,11 @@
 			<artifactId>itext</artifactId>
 			<version>2.1.7</version>
 		</dependency>
-
+		<dependency>
+			<groupId>com.github.mifmif</groupId>
+			<artifactId>generex</artifactId>
+			<version>1.0.2</version>
+		</dependency>
 	</dependencies>
 
 	<description>This system allows to resolve problems by the best Rookies of the World. Problems are provided by Companies</description>
